# research-project

./: .gitignore
MaxDatarateSorter/: CMakeLists.txt  Makefile  MaxDatarateSorter.cpp  MaxDatarateSorter.hpp  MaxDatarateSorterTest.cpp  scheduler  scheduler.cpp
SchedulingMemory/: CMakeLists.txt  Makefile  SchedulingMemory.cc  SchedulingMemory.hpp  SchedulingMemoryTest.cc  main.cc  schedulingMemory
playground/: .cproject  .project  .tkenvrc  Makefile  omnetpp.ini  package.ned  playground
research-project/: .cproject  .project  .tkenvlog  .tkenvrc  Makefile  build  config_channel.xml  config_channel_no_effects.xml  omnetpp.ini  package.ned  research-project  run  runcmd  scheduling_history  scheduling_history_BandEffect-D2D-1RB  scheduling_history_BandEffect-D2D-1RB-MD  scheduling_history_BandEffect-D2D-1RB-MD_1  scheduling_history_BandEffect-D2D-1RB-MD_2  scheduling_history_BandEffect-D2D-1RB-MD_3  scheduling_history_BandEffect-D2D-1RB-MD_4  scheduling_history_BandEffect-D2D-1RB-MD_5  scheduling_history_BandEffect-D2D-1RB-MD_9  scheduling_history_Test-CellularFirst  scheduling_history_Test-Reassignment  scheduling_history_Test-Sorting  scheduling_history_Test-Sorting-D2D  scheduling_history_cellular_first  scheduling_history_circle  scheduling_history_complex  scheduling_history_complex-circle-md  scheduling_history_moreBandsThanDevices  scheduling_history_reassignment  scheduling_history_reassignment-ReassignmentTest-1RBs-Local  scheduling_history_sorting  scheduling_history_sortingd2d  test  test-bandsorting_allocation  unitTest-MoreBandsThanDevices_Comparison
(+232 files in other folders)
